{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "63e1f28d-d7ae-44f2-9c67-2968c7038b77",
            "actions": [
                {
                    "name": "TouchRotation",
                    "type": "Value",
                    "id": "7be107b7-acce-4661-89db-608b78fa506a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a847931-a070-4840-b1dc-a9b2b3255b70",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}